--- a/app/views/dashboard/main.html.erb
+++ b/app/views/dashboard/main.html.erb
@@ -1,5 +1,5 @@
 <h1>Dashboard</h1>
 
-<button onclick="importValues()">Import values</button>
+<button onclick="importValues()">Import values</button> <br><br>
 
 <div id="dashboard"></div>
