connected graph with data, displaying values when import button is clicked

--- a/app/views/dashboard/main.html.erb
+++ b/app/views/dashboard/main.html.erb
@@ -1,7 +1,9 @@
 <h1>Dashboard</h1>
 
-<button onclick="importValues()">Import values</button> <br><br>
+<button id="import">Import values</button> <br><br>
 
-<div id="dashboard"></div>
+<div id="dashboard">
+  
+  <canvas id="graph" width="500" height="200"></canvas>
 
-<script src="Chart.js"></script>
+</div>
