set up table for average, max and min values, and minor styling

--- a/app/views/dashboard/main.html.erb
+++ b/app/views/dashboard/main.html.erb
@@ -6,4 +6,19 @@
   
   <canvas id="graph" width="500" height="200"></canvas>
 
+  <table>
+    <tr>
+      <td><p class="label">Average:</p></td>
+      <td><p class="value" id="average"></p></td>
+    </tr>
+    <tr>
+      <td><p class="label">Max:</p></td>
+      <td><p class="value" id="max"></p></td>
+    </tr>
+    <tr>
+      <td><p class="label">Min:</p></td>
+      <td><p class="value" id="min"></p></td>
+    </tr>
+  </table>
+
 </div>
