--- a/app/assets/stylesheets/dashboard.css
+++ b/app/assets/stylesheets/dashboard.css
@@ -1,13 +1,20 @@
 html {
   font-family: sans-serif;
-  background-color: grey;
-  color: darkblue;
-  margin: 10px;
+  background-color: #28293B;
+  color: white;
+  margin: 20px;
 }
 
 #dashboard {
   width: 700px;
   height: 400px;
+  padding: 20px;
   border: 1px solid darkblue;
   overflow: auto;
+  background-color: white;
+}
+
+.label, .value {
+  color: #F00A0A;
+  font-weight: bold;
 }
