--- a/app/assets/stylesheets/dashboard.css
+++ b/app/assets/stylesheets/dashboard.css
@@ -8,7 +8,8 @@ html {
 #dashboard {
   width: 700px;
   height: 400px;
-  padding: 20px;
+  padding-top: 40px;
+  padding-left: 40px;
   border: 1px solid darkblue;
   overflow: auto;
   background-color: white;
@@ -17,4 +18,23 @@ html {
 .label, .value {
   color: #F00A0A;
   font-weight: bold;
+}
+
+h1 {
+  font-family: 'Roboto';
+  font-size: 45px;
+  margin: auto 0 0 0;
+  font-weight: 700;
+}
+
+#import, #import:active {
+  width: 130px;
+  height: 35px;
+  border-radius: 3px;
+  background-color: #F00A0A;
+  color: white;
+  border: none;
+  outline: none;
+  margin: 20px auto;
+  font-size: 13px;
 }
