--- a/app/assets/stylesheets/dashboard.css
+++ b/app/assets/stylesheets/dashboard.css
@@ -2,7 +2,7 @@ html {
   font-family: sans-serif;
   background-color: #28293B;
   color: white;
-  margin: 20px;
+  margin: 30px;
 }
 
 #dashboard {
@@ -18,6 +18,7 @@ html {
 .label, .value {
   color: #F00A0A;
   font-weight: bold;
+  margin-right: 15px;
 }
 
 h1 {
